# rust-cool-nginx

./: Cargo.toml  README.md  build-frontend.bat  nginx.conf  nginx_detailed_features.md  nginx_features.md  run-server.bat  run-static.bat  test_client.rs
frontend/: index.html
public/: config.html  edit-config.html  file-viewer.html  index.html  static-file.html  status.html  test-path.txt
public/css/: style.css
public/test/: sample.txt
src/: fastcgi.rs  lib.rs  main.rs  static_server.rs  tls.rs
src-tauri/: Cargo.toml  nginx.conf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/client/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/modules/: mod.rs  module.rs
src/modules/ab_testing/: mod.rs
src/modules/access_control/: basic_auth.rs  ip_filter.rs  mod.rs
src/modules/caching/: cache.rs  mod.rs
src/modules/compression/: mod.rs
src/modules/config/: manager.rs
src/modules/core/: mod.rs
src/modules/error_pages/: mod.rs
src/modules/geoip/: mod.rs
src/modules/hot_reload/: mod.rs
src/modules/http/: mod.rs  server.rs
src/modules/image_processing/: mod.rs
src/modules/load_balancing/: algorithms.rs  load_balancer.rs  mod.rs
src/modules/logging/: logger.rs  mod.rs
src/modules/mail/: imap_proxy.rs  mod.rs  pop3_proxy.rs  smtp_proxy.rs
src/modules/monitoring/: mod.rs  status_page.rs
src/modules/performance/: mod.rs
src/modules/platform/: mod.rs
src/modules/process/: mod.rs
src/modules/proxy/: mod.rs  reverse_proxy.rs
src/modules/static_files/: mod.rs
src/modules/websocket/: mod.rs
src/server/: mod.rs
