[package]
name = "rust-cool-nginx"
version = "0.1.0"
edition = "2021"
default-run = "rust-cool-nginx"

[[bin]]
name = "test_client"
path = "test_client.rs"

[[bin]]
name = "rust-cool-nginx"
path = "src/main.rs"

[lib]
name = "rust_cool_nginx"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2"
thiserror = "1.0"
mime_guess = "2.0"
bytes = "1.0"
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.22"
rustls-pemfile = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
md5 = "0.7"
flate2 = "1.0"
base64 = "0.21"
tokio-tungstenite = "0.20"
futures-util = "0.3"
image = "0.24"
# Tauri dependencies
tauri = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-runtime-wry = "2.0"
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }