[package]
name = "rust-cool-nginx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
hyper-staticfile = "0.9"
lazy_static = "1.4"

[dev-dependencies]
tauri-cli = { version = "2.3.1", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
